# WKU_CRReservation

./: .env.example  .gitignore  API 초기 버전  README.md  create_tables.sql  db_test.py  login_probe.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/db/: create_tables.sql  db_config.py  db_connect.py  import_csv.py  timetable_repo.py
backend/app/models/: room.py
backend/smartcampus_crawler/: crawler.py  site_selectors.py
frontend/src/: App.css  App.js
frontend/src/pages/: BuildingsPage.js  FreeRoomsPage.js  HomePage.js  RoomTimelinePage.js  RoomsPage.js  TimelinePage.js
smartcampus_crawler/: crawler.py  site_selectors.py
