[project]
name = "wku-crreservation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ics>=0.7.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
[project.scripts]
crawl = "smartcampus_crawler.crawler:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smartcampus_crawler"]